# cv-builder-from-yaml-to-pdf

./: README.md  backend.yaml  cv_schema.json  cv_schema.md  debug.py  example_cv.yaml  pyproject.toml  schema_docs.md
.github/instructions/: python-instruction.instructions.md  uv.instructions.md
docs/: making_project_callable.md  pydantic_models.md
docs/project_development_guide/: dependencies.md  dependency_usage_examples.md
examples/: pydantic_demo.py
src/cv_builder_from_yaml_to_pdf/: __init__.py  main.py  models.py  pdf_generator.py  schema.py  styles.py  templates.py  yaml_parser.py
src/cv_builder_from_yaml_to_pdf/styles/: __init__.py  base_style.py  classic_style.py  minimal_style.py  modern_style.py
src/cv_builder_from_yaml_to_pdf/templates/: __init__.py  template_manager.py
src/cv_builder_from_yaml_to_pdf/templates/yaml_templates/: academic.yaml  default.yaml  minimal.yaml
tests/: test_cv_builder.py  test_pydantic_models.py
